fix jumping image on loading quiz

--- a/src/components/Quiz/quiz.scss
+++ b/src/components/Quiz/quiz.scss
@@ -41,6 +41,12 @@
   .step{
     @apply w-5/6;
     @apply mx-auto;
+
+    img{
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+    }
     .option{
       @apply w-full;
       @apply py-16;
